<resources>
    <string name="app_name">PH19127_MOB2041</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_phieuMuon">Quản lý phiếu mượn</string>
    <string name="menu_loaiSach">Quản lý loại sách</string>
    <string name="menu_sach">Quản lý sách</string>
    <string name="menu_thanhVien">Quản lý thành viên</string>
    <string name="menu_thuThu">Quản lý thủ thư</string>
    <string name="menu_top10">Top 10 sách mượn nhiều nhất</string>
    <string name="menu_doanhTHu">Doanh thu</string>
    <string name="menu_doiMatKhau">Đổi mật khẩu</string>
    <string name="menu_dangXuat">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>